<resources>
    <string name="app_name">Seguro Popular Hidalgo</string>
    <string name="poliza">Póliza Seguro Popular</string>
    <string name="consecutivo">Número consecutivo</string>
    <string name="iniciar_sesion">Entrar</string>
    <string name="horario">Horario(Matutino, Vespertino, Nocturno, Jornada Acumulada , Todos los anteriores):</string>
    <string name="telefono">Teléfono:</string>
    <string name="codigo_postal">Código postal:</string>
    <string name="direccion">Dirección:</string>
    <string name="tipo_establecimiento">Tipo de establecimiento:</string>
    <string name="localidad">Localidad:</string>
    <string name="municipio">Municipio:</string>
    <string name="clave">Clave:</string>
    <string name="clues">Clues:</string>
    <string name="nombre">Nombre:</string>
    <string name="informacion_usuario">Información de usuario</string>
    <string name="gestor">Gestor</string>
    <string name="unidad_de_adscripci_n">Unidad de adscripción</string>
    <string name="mi_historial">Diario Médico</string>
    <string name="descripci_n">Descripción</string>
    <string name="guardar">Guardar</string>
    <string name="nota"><b>NOTA: La solicitud se envía de forma anónima, la opción de contacto es para que el usuario decida generar seguimiento directo</b></string>
    <string name="dependencia_de_salud_correspondiente"><u>Dependencia de salud correspondiente</u></string>
    <string name="curp">CURP</string>
    <string name="ir_curp"><u>¿Se te olvidó tu CURP?</u></string>
    <string name="no_afiliado"><u>No cuento con Seguro Popular</u></string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="facebook_app_id">595545143987541</string>
    <string name="entradas">Entradas</string>
    <string name="usted">Usted</string>
    <string name="title_activity_introduccion">Introduccion</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>
</resources>
