<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context="com.repss.apprepss.Prueba"
    android:orientation="vertical"
    android:focusable="true"
    android:focusableInTouchMode="true">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="100dp"
                    android:id="@+id/imgSegPop"
                    android:src="@drawable/barratop"
                    android:layout_weight="1"
                    android:layout_margin="10dp"/>



            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#FFFFFF"
                android:orientation="vertical"
                android:layout_margin="20dp">


                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    >

                    <EditText
                        android:id="@+id/edtPoliza"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="number"
                        android:digits="0123456789"
                        android:hint="@string/poliza"/>

                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    >

                    <EditText
                        android:id="@+id/edtCURP"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/curp"/>

                </android.support.design.widget.TextInputLayout>

                <Button
                    android:id="@+id/btnLogin"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"

                    android:text="@string/iniciar_sesion"
                    android:layout_margin="10dp"
                    android:background="@color/patone"
                    />

                <TextView
                    android:id="@+id/txvIrCURP"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/ir_curp"
                    android:textAlignment="center"
                    android:layout_margin="10dp"/>

                <TextView
                    android:id="@+id/noAfiliadoTextView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/no_afiliado"
                    android:textAlignment="center"
                    android:layout_margin="10dp"/>
            </LinearLayout>


        </LinearLayout>
    </ScrollView>

</RelativeLayout>
